legs IK set up ready

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -505,17 +505,17 @@ ControlRigWrapperObject_FRigNullElement=ControlRigWrapperObject_FRigNullElement.
 LastLevel=/Game/test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=True
+RecentAssetEditors=ControlRigEditor
+RecentAssetEditors=IKRigEditor
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=IKRigEditor
 RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=ControlRigEditor
-RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=IKRigEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=IKRigEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1812,7 +1812,7 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 ControlRigWrapperObject_983853390.Nodes=True
@@ -3370,15 +3370,15 @@ RecentsFiles=J:/UnrealEngine/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=J:/UnrealEngine/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/models/character/sitri/sitriRigged
-MRUItem1=/Game/models/character/sitri/CR_Sitri_IK
-MRUItem2=/Game/models/character/sitri/sitri_bodyTexture_processed_v2
-MRUItem3=/Game/models/character/sitri/CR_Sitri
-MRUItem4=/Game/models/character/rig/characterTutCorrectRig_CtrlRig
-MRUItem5=/Game/models/character/characterTutExport
-MRUItem6=/Game/models/character/IK_characterTut
-MRUItem7=/Game/models/character/rig/characterTutCorrectRig
-MRUItem8=/Game/models/character/rig/IK_characterTutCorrectRig
+MRUItem0=/Game/models/character/sitri/CR_Sitri_IK
+MRUItem1=/Game/models/character/sitri/CR_Sitri
+MRUItem2=/Game/models/character/IK_characterTut
+MRUItem3=/Game/models/character/sitri/sitriRigged
+MRUItem4=/Game/models/character/rig/IK_characterTutCorrectRig
+MRUItem5=/Game/models/character/sitri/sitri_bodyTexture_processed_v2
+MRUItem6=/Game/models/character/rig/characterTutCorrectRig_CtrlRig
+MRUItem7=/Game/models/character/characterTutExport
+MRUItem8=/Game/models/character/rig/characterTutCorrectRig
 MRUItem9=/Game/models/character/sitri/sitri_body
 MRUItem10=/Game/models/character/Lovechan_body
 MRUItem11=/Game/models/character/lovechan_eyes
@@ -4055,7 +4055,7 @@ ControlRigWrapperObject_-306131156="\"Object\" \"Object.Nodes.Item\" "
 ControlRigWrapperObject_-342214179="\"Object\" "
 ControlRigWrapperObject_-1069529492="\"Object\" \"Object.Nodes.Value\" "
 CR_Sitri_IK_C="\"Object\" "
-ControlRigWrapperObject_-921477179="\"Object\" \"Object.Nodes.ItemA\" \"Object.Nodes.ItemB\" \"Object.Nodes.EffectorItem\" "
+ControlRigWrapperObject_-921477179="\"Object\" \"Object.Nodes.ItemA\" \"Object.Nodes.ItemB\" \"Object.Nodes.Effector\" \"Object.Nodes.EffectorItem\" "
 ControlRigWrapperObject_FRigNullElement="\"Object\" "
 ControlRigSkeletalMeshComponent="\"Object\" "
 DebugSkelMeshComponent="\"Object\" "
@@ -4380,29 +4380,6 @@ PreferredCommandExecutor=Cmd
 
 [ColorThemes]
 Theme0=New Theme
-
-[RecentColors]
-Color0=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color1=(R=71.999802,G=1.000000,B=1.000000,A=1.000000)
-Color2=(R=58.304409,G=1.000000,B=1.000000,A=1.000000)
-Color3=(R=71.999802,G=1.000000,B=1.000000,A=1.000000)
-Color4=(R=359.776367,G=1.000000,B=1.000000,A=1.000000)
-Color5=(R=300.000000,G=0.535101,B=1.000000,A=1.000000)
-Color6=(R=62.041222,G=0.845708,B=1.000000,A=1.000000)
-Color7=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color8=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color9=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color10=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color11=(R=216.608566,G=0.877009,B=1.000000,A=1.000000)
-Color12=(R=251.565033,G=0.000000,B=1.000000,A=1.000000)
-Color13=(R=205.739105,G=0.589488,B=0.500000,A=1.000000)
-Color14=(R=175.689484,G=0.247058,B=1.000000,A=1.000000)
-Color15=(R=267.674713,G=0.825680,B=1.000000,A=1.000000)
-Color16=(R=267.893036,G=0.825353,B=0.296875,A=1.000000)
-Color17=(R=159.312973,G=0.358089,B=0.296138,A=1.000000)
-Color18=(R=183.923004,G=0.489647,B=0.973958,A=1.000000)
-Color19=(R=267.899689,G=0.826873,B=1.000000,A=1.000000)
-Color20=(R=8.459440,G=1.000000,B=1.000000,A=1.000000)
 
 [MaterialInstanceEditor]
 bDrawGrid=False
