added FK IK switch in the control rig

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -502,6 +502,9 @@ RigNameMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,Con
 RigElementKeyMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform,ControlRigWrapperObject_FRigControlElement.Shape.Shape Properties
 ControlRigWrapperObject_FRigNullElement=ControlRigWrapperObject_FRigNullElement.Transform.Current,ControlRigWrapperObject_FRigNullElement.Transform.Initial
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
+CR_Sitri_BOTH_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
+ControlRigGraph=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup
+AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup,AnimSequence.Animation.AnimationTrackNames
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=AutoKey
@@ -600,11 +603,11 @@ bNavigationToolVisible=False
 LastLevel=/Game/test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=True
 RecentAssetEditors=ControlRigEditor
-RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
@@ -633,7 +636,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 OpenAssetsAtExit=/Game/models/character/sitri/anims/LS_sitri.LS_sitri
-OpenAssetsAtExit=/Game/models/character/sitri/anims/idle_sitri_montage.idle_sitri_montage
 OpenAssetsAtExit=/Game/models/character/sitri/CR_Sitri_FK.CR_Sitri_FK
 OpenAssetsAtExit=/Game/models/character/sitri/CR_Sitri_IK.CR_Sitri_IK
 OpenAssetsAtExit=/Game/models/character/sitri/anims/idle_sitri.idle_sitri
@@ -1961,12 +1963,62 @@ BoneProxy.Transforms=True
 AnimDetailsProxyTransform.NoCategory=True
 AnimDetailsProxyManager.nocategory=True
 ControlRigWrapperObject_FRigReferenceElement.RigElement=True
+ControlRigWrapperObject_1800984944.Nodes=True
+ControlRigWrapperObject_1634796163.Nodes=True
+ControlRigWrapperObject_1634796163.Function=True
+ControlRigGraph.Inputs=True
+ControlRigGraph.Outputs=True
+ControlRigGraph.NodeSettings=True
+ControlRigGraph.NodeDefaults=True
+ControlRigGraph.Graph=True
+ControlRigWrapperObject_-1587192270.Function=True
+ControlRigWrapperObject_1760648994.Nodes=True
+ControlRigWrapperObject_1212310797.Nodes=True
+MovieSceneBindingPropertyInfoList.Binding Properties=True
+MovieSceneControlRigParameterSection.Section=True
+MovieSceneControlRigParameterSection.Animation=True
+MovieSceneControlRigParameterSection.Customization=True
+ControlRigWrapperObject_FRigControlElement.MultiParents=True
+ControlRigWrapperObject_FRigControlElement.AnimationChannels=True
+ControlRigWrapperObject_FRigControlElement.Value=True
+AnimDetailsProxyBool.NoCategory=True
+AnimDetailsProxyManager.Attributes=True
+ControlRigWrapperObject_-460519462.Nodes=True
+ControlRigWrapperObject_1378832951.Function=True
+ControlRigWrapperObject_-234650409.Nodes=True
+ControlRigWrapperObject_1313431630.Nodes=True
+ControlRigWrapperObject_2064265112.Nodes=True
+ControlRigWrapperObject_-1830881834.Nodes=True
+ControlRigWrapperObject_-1830881834.Function=True
+ControlRigWrapperObject_912065218.Nodes=True
+ControlRigWrapperObject_912065218.Function=True
+ControlRigWrapperObject_1952112950.Nodes=True
+ControlRigWrapperObject_1952112950.Function=True
+ControlRigWrapperObject_260696665.Nodes=True
+ControlRigWrapperObject_260696665.Function=True
+MovieSceneControlRigParameterTrack.Track=True
+AnimSeqExportOption.Export=False
+AnimSequence.Animation Model=True
+AnimSequence.Animation=True
+AnimSequence.Compression=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.RootMotion=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+MovieSceneSpawnableActorBinding.Actor=True
+MovieSceneSpawnableActorBinding.Spawnable=True
+MovieScene3DTransformSection.Section=True
+MovieScene3DTransformSection.Rotation=True
+MovieScene3DTransformSection.Transform=True
+MovieScene3DTransformTrack.Track=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetDialog.ZoomScale=0
-ContentBrowserDrawer.SelectedPaths=/Game/models/character/sitri
+ContentBrowserDrawer.SelectedPaths=/Game/models/character/sitri/anims
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -2080,6 +2132,15 @@ SequencerControlRigTrackAssetPicker.ZoomScale=0
 SequencerControlRigTrackAssetPicker.ListViewColumnsManuallyChangedOnce=False
 SequencerControlRigTrackAssetPicker.ColumnViewColumnsManuallyChangedOnce=False
 SequencerControlRigTrackAssetPicker.ListHiddenColumns=Class
+SequencerAssetPicker.ThumbnailSizeGrid=3
+SequencerAssetPicker.ThumbnailSizeList=3
+SequencerAssetPicker.ThumbnailSizeCustom=3
+SequencerAssetPicker.ThumbnailSizeColumn=0
+SequencerAssetPicker.CurrentViewType=0
+SequencerAssetPicker.ZoomScale=0
+SequencerAssetPicker.ListViewColumnsManuallyChangedOnce=False
+SequencerAssetPicker.ColumnViewColumnsManuallyChangedOnce=False
+SequencerAssetPicker.ListHiddenColumns=Class
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3545,36 +3606,36 @@ RecentsFiles=J:/UnrealEngine/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=J:/UnrealEngine/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/models/character/sitri/CR_Sitri_BOTH
-MRUItem1=/Game/models/character/sitri/CR_Sitri_FK
+MRUItem0=/Game/models/character/sitri/anims/testAnimation
+MRUItem1=/Game/models/character/sitri/CR_Sitri_BOTH
 MRUItem2=/Game/models/character/sitri/anims/idle_sitri
 MRUItem3=/Game/models/character/sitri/CR_Sitri_IK
-MRUItem4=/Game/models/character/sitri/anims/idle_sitri_montage
-MRUItem5=/Game/models/character/sitri/anims/LS_sitri
-MRUItem6=/Game/models/character/IK_characterTut
-MRUItem7=/Game/models/character/sitri/sitriRigged
-MRUItem8=/Game/models/character/rig/IK_characterTutCorrectRig
-MRUItem9=/Game/models/character/sitri/sitri_bodyTexture_processed_v2
-MRUItem10=/Game/models/character/rig/characterTutCorrectRig_CtrlRig
-MRUItem11=/Game/models/character/characterTutExport
-MRUItem12=/Game/models/character/rig/characterTutCorrectRig
-MRUItem13=/Game/models/character/sitri/sitri_body
-MRUItem14=/Game/models/character/Lovechan_body
-MRUItem15=/Game/models/character/lovechan_eyes
-MRUItem16=/Game/models/character/lovechan_mouth
-MRUItem17=/Game/blueprints/BP_Drum
-MRUItem18=/Game/materials/simple
-MRUItem19=/Game/models/drum/materials/PSX_Master_Mat
-MRUItem20=/Game/models/drum/materials/drum_snare
-MRUItem21=/Game/models/drum/materials/drum_kick
-MRUItem22=/Game/models/drum/materials/drum_hihat
-MRUItem23=/Game/models/drum/materials/drum_cymball
-MRUItem24=/Game/models/drum/materials/PSX_Jittering
-MRUItem25=/Game/blueprints/BP_DrumControllerPawn
-MRUItem26=/Game/models/drum/snare
-MRUItem27=/Game/models/drum/kick
-MRUItem28=/Game/models/drum/hihat
-MRUItem29=/Game/models/drum/cymbal
+MRUItem4=/Game/models/character/sitri/CR_Sitri_FK
+MRUItem5=/Game/models/character/sitri/anims/idle_sitri_montage
+MRUItem6=/Game/models/character/sitri/anims/LS_sitri
+MRUItem7=/Game/models/character/IK_characterTut
+MRUItem8=/Game/models/character/sitri/sitriRigged
+MRUItem9=/Game/models/character/rig/IK_characterTutCorrectRig
+MRUItem10=/Game/models/character/sitri/sitri_bodyTexture_processed_v2
+MRUItem11=/Game/models/character/rig/characterTutCorrectRig_CtrlRig
+MRUItem12=/Game/models/character/characterTutExport
+MRUItem13=/Game/models/character/rig/characterTutCorrectRig
+MRUItem14=/Game/models/character/sitri/sitri_body
+MRUItem15=/Game/models/character/Lovechan_body
+MRUItem16=/Game/models/character/lovechan_eyes
+MRUItem17=/Game/models/character/lovechan_mouth
+MRUItem18=/Game/blueprints/BP_Drum
+MRUItem19=/Game/materials/simple
+MRUItem20=/Game/models/drum/materials/PSX_Master_Mat
+MRUItem21=/Game/models/drum/materials/drum_snare
+MRUItem22=/Game/models/drum/materials/drum_kick
+MRUItem23=/Game/models/drum/materials/drum_hihat
+MRUItem24=/Game/models/drum/materials/drum_cymball
+MRUItem25=/Game/models/drum/materials/PSX_Jittering
+MRUItem26=/Game/blueprints/BP_DrumControllerPawn
+MRUItem27=/Game/models/drum/snare
+MRUItem28=/Game/models/drum/kick
+MRUItem29=/Game/models/drum/hihat
 
 [/Script/RewindDebuggerVLog.RewindDebuggerVLogSettings]
 DisplayVerbosity=4
@@ -4262,6 +4323,25 @@ MovieSceneSection="\"Object\" "
 ControlRigWrapperObject_FRigReferenceElement="\"Object\" "
 CR_Sitri_BOTH_C="\"Object\" "
 CR_Sitri_FK_C="\"Object\" "
+ControlRigWrapperObject_1800984944="\"Object\" "
+REINST_CR_Sitri_IK_C_2="\"Object\" "
+ControlRigWrapperObject_1634796163="\"Object\" "
+ControlRigWrapperObject_1760648994="\"Object\" \"Object.Nodes.Items\" "
+ControlRigWrapperObject_1212310797="\"Object\" \"Object.Nodes.Item\" "
+MovieSceneControlRigParameterTrack="\"Object\" "
+MovieSceneControlRigParameterSection="\"Object\" "
+MovieSceneParameterSection="\"Object\" "
+MovieSceneSkeletalAnimationTrack="\"Object\" "
+MovieSceneCommonAnimationTrack="\"Object\" "
+ControlRigWrapperObject_-460519462="\"Object\" "
+ControlRigWrapperObject_-234650409="\"Object\" "
+ControlRigWrapperObject_1313431630="\"Object\" "
+ControlRigWrapperObject_2064265112="\"Object\" "
+ControlRigWrapperObject_-1830881834="\"Object\" "
+ControlRigWrapperObject_912065218="\"Object\" "
+ControlRigWrapperObject_1952112950="\"Object\" "
+ControlRigWrapperObject_260696665="\"Object\" "
+AnimSequence="\"Object\" "
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -4378,6 +4458,7 @@ DirectionalLight.Rendering=True
 SkeletalMeshComponent.Animation=False
 PythonScriptPluginSettings.PythonRemoteExecution=True
 Texture2D.LevelOfDetail=False
+PropertyWrapper.Variable=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -4758,7 +4839,7 @@ bAutoExpandToSelection=True
 bAlwaysShowLockState=False
 ItemDefaultViewMode=None
 ItemProxyViewMode=None
-CustomColumnViews=()
+CustomColumnViews=((ViewName=NSLOCTEXT("LevelSequenceNavigationToolProvider", "AnimationColumnViewName", "Animation"),VisibleColumns=("Playhead","Color","Label","Items","InTime","OutTime","HBias")))
 EnabledBuiltInFilters=()
 FilterBars=(("LevelSequenceEditor", ()))
 bAutoExpandNodesOnFilterPass=False
@@ -4771,4 +4852,39 @@ bSyncSelectionToSequencer=True
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[/Script/ControlRigEditor.ControlRigEditModeSettings]
+bDisplayHierarchy=False
+bDisplayNulls=False
+bDisplaySockets=False
+bHideControlShapes=False
+bShowAllProxyControls=False
+bShowControlsAsOverlay=False
+DrivenControlColor=(R=0.800000,G=0.800000,B=0.800000,A=1.000000)
+bDisplayAxesOnSelection=False
+AxisScale=10.000000
+bCoordSystemPerWidgetMode=True
+bOnlySelectRigControls=True
+bLocalTransformsInEachLocalSpace=True
+GizmoScale=1.000000
+LastInViewportTweenWidgetLocation=(X=0.000000,Y=0.000000)
+
+[/Script/Sequencer.MotionTrailToolOptions]
+bShowSelectedTrails=False
+TrailStyle=Default
+DefaultColor=(R=0.220000,G=0.150000,B=1.000000,A=1.000000)
+TimePreColor=(R=0.220000,G=0.350000,B=0.800000,A=1.000000)
+TimePostColor=(R=0.850000,G=0.250000,B=0.100000,A=1.000000)
+DashPreColor=(R=0.200000,G=0.900000,B=0.300000,A=1.000000)
+DashPostColor=(R=0.700000,G=0.200000,B=0.700000,A=1.000000)
+TrailThickness=0.000000
+FramesBefore=10
+FramesAfter=10
+bShowKeys=True
+SelectedKeyColor=(R=0.800000,G=0.800000,B=0.000000,A=1.000000)
+KeySize=3.000000
+bShowMarks=False
+MarkColor=(R=0.250000,G=1.000000,B=0.150000,A=1.000000)
+MarkSize=5.000000
+MaxNumberPinned=10
 
