reinforcement learning completely implemented

--- a/drummerbot_test.uproject
+++ b/drummerbot_test.uproject
@@ -24,6 +24,14 @@
 		{
 			"Name": "MIDIDevice",
 			"Enabled": true
+		},
+		{
+			"Name": "LearningAgents",
+			"Enabled": true
+		},
+		{
+			"Name": "Text3D",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
