text on episode completed added

--- a/drummerbot_test.uproject
+++ b/drummerbot_test.uproject
@@ -28,6 +28,10 @@
 		{
 			"Name": "LearningAgents",
 			"Enabled": true
+		},
+		{
+			"Name": "Tensorboard",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
