added log for reward
+experimented with 0.05 and 0.5 distanceTemp
Fixed so that the collision boolean happens on hit

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -542,7 +542,7 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_
 AnimGraphNode_TransitionResult=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup
 EdGraph=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup
 BP_BallAgent_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
-BP_Drum_ML_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
+BP_Drum_ML_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 SpecifyAgentObservation=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup
 GatherAgentObservation=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
 GatherAgentObservation_0=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup
@@ -562,7 +562,7 @@ BP_EpisodeText_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_Varia
 Text3DComponent=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
 BP_InfoText_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
 WidgetComponent=WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
-BP_Text_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup
+BP_Text_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 W_InfoText_C=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 K2Node_FormatText=PropertyWrapper.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.OriginalScale,K2Node_VariableGet.DefaultValueCategory.Text3DComponent,K2Node_VariableGet.DefaultValueCategory.Trainer Training Settings,K2Node_VariableGet.DefaultValueCategory.Trainer Settings,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,WidgetComponent.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 
@@ -665,6 +665,10 @@ LastLevel=/Game/learning/RL_BallDrummer
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=True
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -672,10 +676,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2505,6 +2505,7 @@ BP_Text_C.Networking=True
 W_InfoText_C.Layout=True
 W_InfoText_C.Default=True
 BP_Text_C.Default=True
+BP_LearningTrainer_C.Default=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -4152,17 +4153,17 @@ RecentsFiles=J:/UnrealEngine/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=J:/UnrealEngine/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/learning/RL_BallDrummer
-MRUItem1=/Game/learning/BP_Drum_ML
-MRUItem2=/Game/learning/BP_BallAgent
-MRUItem3=/Game/learning/BP_LearningTrainer
-MRUItem4=/Game/learning/assets/BP_Text
-MRUItem5=/Game/learning/assets/W_InfoText
-MRUItem6=/Game/learning/BP_LearningAgentManagerR
-MRUItem7=/Game/learning/DA_NeuralNetworkPolicy
-MRUItem8=/Game/learning/DA_NeuralNetworkEncoder
-MRUItem9=/Game/learning/DA_NeuralNetworkDecoder
-MRUItem10=/Game/learning/DA_NeuralNetworkCritic
+MRUItem0=/Game/learning/DA_NeuralNetworkPolicy
+MRUItem1=/Game/learning/DA_NeuralNetworkEncoder
+MRUItem2=/Game/learning/DA_NeuralNetworkDecoder
+MRUItem3=/Game/learning/DA_NeuralNetworkCritic
+MRUItem4=/Game/learning/RL_BallDrummer
+MRUItem5=/Game/learning/BP_Drum_ML
+MRUItem6=/Game/learning/BP_BallAgent
+MRUItem7=/Game/learning/BP_LearningTrainer
+MRUItem8=/Game/learning/assets/BP_Text
+MRUItem9=/Game/learning/assets/W_InfoText
+MRUItem10=/Game/learning/BP_LearningAgentManagerR
 MRUItem11=/Game/test
 MRUItem12=/Game/learning/BP_LearningInteractor
 MRUItem13=/Game/models/character/sitri/anims/BP_Notify_Animation_State
@@ -5060,8 +5061,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -5115,6 +5116,7 @@ K2Node_FunctionEntry.Graph=False
 EdGraph.Graph=True
 EditorNotifyObject.AnimNotify=False
 LearningAgentsManager.ComponentTick=False
+BP_LearningAgentManagerR_C.Replication=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
