added physics based rig

--- a/drummerbot_test.uproject
+++ b/drummerbot_test.uproject
@@ -32,6 +32,14 @@
 		{
 			"Name": "Tensorboard",
 			"Enabled": true
+		},
+		{
+			"Name": "PhysicsControl",
+			"Enabled": true
+		},
+		{
+			"Name": "AnimatorKit",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
